--- a/doc/examples/figures_paper1/figures/steady-state-validation.ipynb
+++ b/doc/examples/figures_paper1/figures/steady-state-validation.ipynb
@@ -11,6 +11,7 @@
     "import pickle\n",
     "import matplotlib.pylab as plt, matplotlib\n",
     "import pandas\n",
+    "import bgshr\n",
     "import scipy.stats\n",
     "import gzip\n",
     "\n",
@@ -32,16 +33,6 @@
     "matplotlib.rc(\"axes\", titlesize=8)\n",
     "matplotlib.rc(\"legend\", fontsize=6)\n",
     "plt.rcParams['legend.title_fontsize'] = 'xx-small'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "83cc3459-2426-411e-abfe-cacc856ab7d8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import bgshr"
    ]
   },
   {
@@ -670,14 +661,6 @@
    "source": [
     "fig"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c945311-99a8-44d1-8621-8aed78b018eb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
