--- a/doc/examples/figures_paper1/figures/dfe-fitting_2_epochs.ipynb
+++ b/doc/examples/figures_paper1/figures/dfe-fitting_2_epochs.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "import pandas\n",
     "import numpy as np\n",
+    "import bokeh\n",
     "import bgshr\n",
     "import os, pickle\n",
     "from scipy.stats import gamma\n",
@@ -82,294 +83,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1309d823-aabe-4dac-b464-38166e44c45f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>r</th>\n",
-       "      <th>s</th>\n",
-       "      <th>uL</th>\n",
-       "      <th>Order</th>\n",
-       "      <th>Generation</th>\n",
-       "      <th>Hr</th>\n",
-       "      <th>pi0</th>\n",
-       "      <th>B</th>\n",
-       "      <th>uR</th>\n",
-       "      <th>Hl</th>\n",
-       "      <th>piN_pi0</th>\n",
-       "      <th>piN_piS</th>\n",
-       "      <th>Ns</th>\n",
-       "      <th>Ts</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000412</td>\n",
-       "      <td>0.000412</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>0.000024</td>\n",
-       "      <td>0.000024</td>\n",
-       "      <td>100000;10000</td>\n",
-       "      <td>0;25000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000412</td>\n",
-       "      <td>0.000412</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>0.000024</td>\n",
-       "      <td>0.000024</td>\n",
-       "      <td>100000;10000</td>\n",
-       "      <td>0;25000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.258900e-08</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000412</td>\n",
-       "      <td>0.000412</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>0.000024</td>\n",
-       "      <td>0.000024</td>\n",
-       "      <td>100000;10000</td>\n",
-       "      <td>0;25000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.584900e-08</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000412</td>\n",
-       "      <td>0.000412</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>0.000024</td>\n",
-       "      <td>0.000024</td>\n",
-       "      <td>100000;10000</td>\n",
-       "      <td>0;25000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.995300e-08</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000412</td>\n",
-       "      <td>0.000412</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>0.000024</td>\n",
-       "      <td>0.000024</td>\n",
-       "      <td>100000;10000</td>\n",
-       "      <td>0;25000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>249691</th>\n",
-       "      <td>1.000000e-01</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>0.000396</td>\n",
-       "      <td>0.000396</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>3.955414e-04</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>100000;10000</td>\n",
-       "      <td>0;25000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>249692</th>\n",
-       "      <td>1.000000e-01</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1500</td>\n",
-       "      <td>0.000400</td>\n",
-       "      <td>0.000400</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>3.995475e-04</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>100000;10000</td>\n",
-       "      <td>0;25000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>249693</th>\n",
-       "      <td>1.000000e-01</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>0.000404</td>\n",
-       "      <td>0.000404</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>4.035437e-04</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>100000;10000</td>\n",
-       "      <td>0;25000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>249694</th>\n",
-       "      <td>1.000000e-01</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>10</td>\n",
-       "      <td>500</td>\n",
-       "      <td>0.000408</td>\n",
-       "      <td>0.000408</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>4.075299e-04</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>100000;10000</td>\n",
-       "      <td>0;25000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>249695</th>\n",
-       "      <td>1.000000e-01</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000412</td>\n",
-       "      <td>0.000412</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.000000e-08</td>\n",
-       "      <td>4.115061e-04</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>100000;10000</td>\n",
-       "      <td>0;25000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>249696 rows × 14 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   r    s            uL  Order  Generation        Hr  \\\n",
-       "0       0.000000e+00 -1.0  1.000000e-08      0           0  0.000412   \n",
-       "1       1.000000e-08 -1.0  1.000000e-08      0           0  0.000412   \n",
-       "2       1.258900e-08 -1.0  1.000000e-08      0           0  0.000412   \n",
-       "3       1.584900e-08 -1.0  1.000000e-08      0           0  0.000412   \n",
-       "4       1.995300e-08 -1.0  1.000000e-08      0           0  0.000412   \n",
-       "...              ...  ...           ...    ...         ...       ...   \n",
-       "249691  1.000000e-01  0.0  1.000000e-08     10        2000  0.000396   \n",
-       "249692  1.000000e-01  0.0  1.000000e-08     10        1500  0.000400   \n",
-       "249693  1.000000e-01  0.0  1.000000e-08     10        1000  0.000404   \n",
-       "249694  1.000000e-01  0.0  1.000000e-08     10         500  0.000408   \n",
-       "249695  1.000000e-01  0.0  1.000000e-08     10           0  0.000412   \n",
-       "\n",
-       "             pi0    B            uR            Hl   piN_pi0   piN_piS  \\\n",
-       "0       0.000412  1.0  1.000000e-08  1.000000e-08  0.000024  0.000024   \n",
-       "1       0.000412  1.0  1.000000e-08  1.000000e-08  0.000024  0.000024   \n",
-       "2       0.000412  1.0  1.000000e-08  1.000000e-08  0.000024  0.000024   \n",
-       "3       0.000412  1.0  1.000000e-08  1.000000e-08  0.000024  0.000024   \n",
-       "4       0.000412  1.0  1.000000e-08  1.000000e-08  0.000024  0.000024   \n",
-       "...          ...  ...           ...           ...       ...       ...   \n",
-       "249691  0.000396  1.0  1.000000e-08  3.955414e-04  1.000000  1.000000   \n",
-       "249692  0.000400  1.0  1.000000e-08  3.995475e-04  1.000000  1.000000   \n",
-       "249693  0.000404  1.0  1.000000e-08  4.035437e-04  1.000000  1.000000   \n",
-       "249694  0.000408  1.0  1.000000e-08  4.075299e-04  1.000000  1.000000   \n",
-       "249695  0.000412  1.0  1.000000e-08  4.115061e-04  1.000000  1.000000   \n",
-       "\n",
-       "                  Ns       Ts  \n",
-       "0       100000;10000  0;25000  \n",
-       "1       100000;10000  0;25000  \n",
-       "2       100000;10000  0;25000  \n",
-       "3       100000;10000  0;25000  \n",
-       "4       100000;10000  0;25000  \n",
-       "...              ...      ...  \n",
-       "249691  100000;10000  0;25000  \n",
-       "249692  100000;10000  0;25000  \n",
-       "249693  100000;10000  0;25000  \n",
-       "249694  100000;10000  0;25000  \n",
-       "249695  100000;10000  0;25000  \n",
-       "\n",
-       "[249696 rows x 14 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_exp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "c6954f19-84b0-44b5-934d-996d756065e0",
    "metadata": {},
    "outputs": [],
@@ -418,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "acd6a1b3-52af-49f1-9012-ecd9fabeedd8",
    "metadata": {},
    "outputs": [],
@@ -440,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9c1325d8-3d81-4975-979c-2d66e6950f7b",
    "metadata": {},
    "outputs": [
@@ -480,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "403d375b-077a-4345-97b6-253b185893fd",
    "metadata": {
     "scrolled": true
@@ -565,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "0b0fdbb9-a906-4474-82f5-d99cb62b1cd7",
    "metadata": {},
    "outputs": [],
@@ -576,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "7dabe3d2-bb5c-44c1-8d24-ecab9a63cd44",
    "metadata": {},
    "outputs": [
@@ -586,7 +299,7 @@
        "Text(0, 0.5, 'Relative mut. rate')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -611,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "281ec6b0-8b82-4ff9-9d2e-3b5c63cfebc2",
    "metadata": {},
    "outputs": [
@@ -621,7 +334,7 @@
        "Text(0, 0.5, 'shape')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -647,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "f703269a-d57e-4b6d-9748-affdb4f41310",
    "metadata": {},
    "outputs": [
@@ -657,7 +370,7 @@
        "Text(0, 0.5, 'scale')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -684,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "763fdcf7-3f84-45c9-a0d9-8c097fb728b8",
    "metadata": {},
    "outputs": [
@@ -694,7 +407,7 @@
        "Text(0, 0.5, 'E[s]')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -721,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "42035b52-7ee9-4f73-9ff3-9f7c50e76de7",
    "metadata": {},
    "outputs": [
@@ -731,7 +444,7 @@
        "Text(0, 0.5, 'Var(s)')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -758,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "77504be9-50e0-4a8a-9c3f-5e0bff7217d1",
    "metadata": {},
    "outputs": [],
@@ -773,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "223f1263-0d4a-4db3-bd1b-3864d60d9004",
    "metadata": {},
    "outputs": [],
@@ -795,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "c423ee87-7547-4df0-b049-c37551e9b46a",
    "metadata": {},
    "outputs": [
@@ -816,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "f3b64f9b-b445-40bd-9f42-cfc513e4a1a3",
    "metadata": {},
    "outputs": [],
@@ -834,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "1d316b30-8658-440a-a9c1-50b79e57d354",
    "metadata": {},
    "outputs": [
@@ -844,7 +557,7 @@
        "Text(0.5, 1.0, 'Fixed mutation rate')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "33f59c69-f2b6-4328-813c-a341af1c191d",
    "metadata": {},
    "outputs": [
@@ -875,7 +588,7 @@
        "(0.4360302734374994, 2.5)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "60f0e89d-d6b6-4bea-b310-f005402c2db1",
    "metadata": {},
    "outputs": [
@@ -906,7 +619,7 @@
        "<Figure size 650x250 with 3 Axes>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "30caf7b4-7137-431e-92aa-7041acc48f86",
    "metadata": {},
    "outputs": [],
@@ -933,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "f9702432-efca-4cdb-b414-d05ff2742d2c",
    "metadata": {},
    "outputs": [
@@ -944,7 +657,7 @@
        "<Figure size 650x250 with 3 Axes>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "4d2e9bdd-c3f2-4659-a4a5-aa931af77238",
    "metadata": {},
    "outputs": [],
@@ -966,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "66b346b8-d956-4d76-887b-90e4d3a15866",
    "metadata": {},
    "outputs": [
@@ -987,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "a4fa3c09-3217-438a-8cb4-894b17058e16",
    "metadata": {},
    "outputs": [],
@@ -1007,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "37da9605-8610-4172-a29a-21b23a050d46",
    "metadata": {},
    "outputs": [],
@@ -1027,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "ab5eeee4-b019-4551-ab84-6009bb60a90d",
    "metadata": {},
    "outputs": [],
@@ -1039,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "fd1decf8-0963-4589-8da8-da3cead4abf3",
    "metadata": {},
    "outputs": [
@@ -1050,7 +763,7 @@
        "<Figure size 450x250 with 2 Axes>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
